--- a/style.css
+++ b/style.css
@@ -51,21 +51,49 @@ header nav a{
     height: 100%;
     z-index: 1;
 }
-.carousel .list .item::before{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: var(--bg-color);
-    content: var(--title);
-    font-size: 15em;
-    font-weight: bold;
-    text-transform: uppercase;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #eee4;
-    z-index: -1;
+.carousel .list .item::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--bg-color);
+  content: var(--title);
+  font-size: 15em;
+  font-weight: bold;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #eee4;
+  z-index: -1;
+  /* Add these filter properties */
+  filter: url('data:image/svg+xml,\
+    <svg xmlns="http://www.w3.org/2000/svg">\
+      <filter id="squiggle">\
+        <feTurbulence baseFrequency="0.05" numOctaves="2" result="noise" seed="5" />\
+        <feDisplacementMap in="SourceGraphic" in2="noise" scale="4" />\
+      </filter>\
+    </svg>#squiggle');
 }
+.carousel .list .item:nth-child(1)::before {
+    filter: url('data:image/svg+xml,\
+      <svg xmlns="http://www.w3.org/2000/svg">\
+        <filter id="squiggle1">\
+          <feTurbulence baseFrequency="0.05" numOctaves="2" result="noise" seed="1" />\
+          <feDisplacementMap in="SourceGraphic" in2="noise" scale="4" />\
+        </filter>\
+      </svg>#squiggle1');
+  }
+  
+  .carousel .list .item:nth-child(2)::before {
+    filter: url('data:image/svg+xml,\
+      <svg xmlns="http://www.w3.org/2000/svg">\
+        <filter id="squiggle2">\
+          <feTurbulence baseFrequency="0.05" numOctaves="2" result="noise" seed="2" />\
+          <feDisplacementMap in="SourceGraphic" in2="noise" scale="4" />\
+        </filter>\
+      </svg>#squiggle2');
+  }
+
 .carousel .list .item .image{
     flex-shrink: 0;
     width: 300px;
